feat(control-point): initialize frontend with React and Vite
- Added package.json for frontend with React and Vite dependencies.
- Created main entry point (main.tsx) for rendering the Dashboard component.
- Implemented ClaimDetail page for displaying individual claim details.
- Developed Dashboard page to fetch and display claims with summary statistics.
- Added CountCard component for displaying claim counts.
- Configured TypeScript settings in tsconfig.json for the frontend.
- Updated workspace configuration in package.json for better organization.
- Introduced control-point-gate script for automated change detection and CLI integration.
- Refined tsconfig.base.json paths for shared libraries.

--- a/nx.json
+++ b/nx.json
@@ -1,6 +1,8 @@
 {
   "npmScope": "trestle-roundhouse",
-  "affected": {"defaultBase": "main"},
+  "affected": {
+    "defaultBase": "main"
+  },
   "tasksRunnerOptions": {},
   "workspaceLayout": {
     "appsDir": "apps",
