--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,7 +9,9 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "@shared-ts/*": ["libs/shared-ts/*"]
+      "@shared-ts/*": [
+        "libs/shared-ts/*"
+      ]
     }
   }
 }
