--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,27 @@
 {
   "root": true,
-  "ignorePatterns": ["node_modules/*", "dist/*"],
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
-  "plugins": ["react"],
-  "env": {"browser": true, "es2021": true},
-  "parserOptions": {"ecmaVersion": 2021, "sourceType": "module"},
-  "settings": {"react": {"version": "detect"}}
+  "ignorePatterns": [
+    "node_modules/*",
+    "dist/*"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
+  "plugins": [
+    "react"
+  ],
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2021,
+    "sourceType": "module"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  }
 }
