--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,6 +9,8 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.1",
+    "antd": "^5.15.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
