--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -8,8 +8,12 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.10"
 fastapi = "^0.110.0"
 uvicorn = "^0.29.0"
+httpx = "^0.27.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.0.0"
 black = "^24.0.0"
 ruff = "^0.3.0"
+
+[tool.pytest.ini_options]
+addopts = "-p no:homeassistant"
