--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,12 +12,13 @@
     "@ant-design/icons": "^5.3.1",
     "antd": "^5.15.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0",
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0"
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^7.3.1"
   }
 }
