--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "libs/*"
   ],
   "devDependencies": {
-    "nx": "^18.0.0",
-    "typescript": "^5.0.0",
     "eslint": "^8.0.0",
-    "prettier": "^3.0.0",
     "jest": "^29.0.0",
+    "nx": "^18.0.0",
+    "prettier": "^3.0.0",
+    "typescript": "^5.0.0",
     "vitest": "^1.0.0"
+  },
+  "dependencies": {
+    "react-router-dom": "^7.12.0"
   }
 }
