--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
     hooks:
       - id: check-yaml
       - id: check-json
+        exclude: ^(apps/control-point/frontend/requirements_allocation\.generated\.json|\.nx/)
       - id: end-of-file-fixer
       - id: trailing-whitespace
 
