--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "libs/*"
   ],
   "devDependencies": {
-    "eslint": "^8.0.0",
     "jest": "^29.0.0",
     "nx": "^18.0.0",
-    "prettier": "^3.0.0",
+    "@biomejs/biome": "^1.9.4",
     "typescript": "^5.0.0",
     "vitest": "^1.0.0"
   },
