feat: add additional dependencies for biome and update ruff ignore rules

--- a/ruff.toml
+++ b/ruff.toml
@@ -2,7 +2,7 @@ line-length = 120
 
 [lint]
 select = ["E", "F", "I", "ANN", "N", "ERA"]
-ignore = []
+ignore = ["ANN101", "ANN102", "ANN401"]
 
 [lint.per-file-ignores]
 "trestle-dev-tools_legacy_backend/**" = ["E", "F", "I"]
