--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,7 @@ repos:
     rev: v0.6.1
     hooks:
       - id: biome-check
+        additional_dependencies: ['@biomejs/biome@1.9.4']
 
   - repo: https://github.com/DavidAnson/markdownlint-cli2
     rev: v0.15.0
