--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -13,5 +13,9 @@
         "build",
         "generated",
         ".nx"
-    ]
+    ],
+    "diagnosticSeverityOverrides": {
+        "reportMissingImports": "none",
+        "reportMissingModuleSource": "none"
+    }
 }
