--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "trestle-roundhouse",
   "version": "0.1.0",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "libs/*"
-  ],
+  "workspaces": ["apps/*", "libs/*"],
   "devDependencies": {
     "jest": "^29.0.0",
     "nx": "^18.0.0",
