--- a/apps/control-point/frontend/tsconfig.json
+++ b/apps/control-point/frontend/tsconfig.json
@@ -1,10 +1,8 @@
 {
-    "extends": "../../../tsconfig.base.json",
-    "compilerOptions": {
-        "jsx": "react-jsx",
-        "outDir": "dist"
-    },
-    "include": [
-        "src"
-    ]
+  "extends": "../../../tsconfig.base.json",
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "outDir": "dist"
+  },
+  "include": ["src"]
 }
