feat: enhance frontend components and screens with new layout and functionality
- Integrate Ant Design's ConfigProvider for dark theme support in index.tsx.
- Refactor ControlPoint screen to use new PageHeader and ScreenLayout components.
- Remove unused Environments.module.css and refactor Environments screen to utilize new layout components.
- Update Overview and Placeholder screens to use PageHeader and ScreenLayout for consistent layout.
- Introduce new PageHeader and ScreenLayout components for better structure and reusability.
- Implement Simulator components including SimulatorActions, SimulatorAuditLog, SimulatorStatusHeader, and SimulatorTable for improved simulator management.
- Create SimulatorSelection screen for selecting available simulators with enhanced error handling.
- Add ui_composition_check script for enforcing UI composition rules across screens.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,7 @@ repos:
           - httpx
           - requests
           - pyyaml
+          - python-dotenv
 
   - repo: https://github.com/biomejs/pre-commit
     rev: v0.6.1
@@ -67,3 +68,9 @@ repos:
         entry: node scripts/arch/shared_ts_import_check.js
         language: system
         files: ^libs/shared-ts/
+
+      - id: ui-composition-check
+        name: UI Composition Check
+        entry: node scripts/arch/ui_composition_check.js
+        language: system
+        files: ^apps/frontend/src/
