--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.10"
 fastapi = "^0.110.0"
 uvicorn = "^0.29.0"
 httpx = "^0.27.0"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.0.0"
